1999-03-15  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (libdefobj_la_CPPFLAGS): Add 
	CFLAGS_NOWARN_UNKNOWN_PRAGMAS.
	Do not override CFLAGS nor OBJCFLAGS.
	
	* FCall.m: Hide jniEnv is JDK is not available.
	Hide JNI function tables if JDK is not available.
	(init_javacall_tables): Likewise.
	([FCall -createEnd]): Call fillHiddenArguments outside of the
	JDK dependent if block.

	* FCall.h: Hide init_javacalltables if JDK is not available. 

	* Makefile.am: Add CFLAGS_NOWARN_UNKNOWN_PRAGMAS to OBJCFLAGS and 
	CFLAGS to prevent unkown pragma warning while parsing jni.h.

	* FCall.h: Rename FCall fields with f prefix to avoid name clashes.

	* FCall.m: Likewise
	
	* Makefile.am (INCLUDES): Add FFIINCLUDES.

	* FCall.m: Remove extern from declaration of jniEnv.

	* FArguments.m: New file. FArguments is used for describing
	arguments passed to a foreign call and return value type

	* FArguments.h: New file. 

	* FCall.m: Separate FCall into FCall and FArguments. FCall
	is used for actual method specification and performing that
	call. It takes arguments and return type specification from
	FArguments.

	* FCall.h: Likewise.

	* Makefile.am (jdkdir, javaincludedir, JAVAINCLUDES): Add
	new variables for java include directories.
	(INCLUDES): Add JAVAINCLUDES to INCLUDES variable.
	(SRC): Add FCall.m and FArguments.m
	(defobj_HEADERS): Add FCall.h and FArguments.h

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.
	(libdefobj_a_SOURCES): Remove.

1999-03-10  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.h: New FCall.h

	* FCall.m: New FCall.m

1999-03-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Archiver.m (lisp_output_objects, [Archiver_c -registerClient:],
	[Archiver_c -unregisterClient:]): Use isInstance instead of isClass.

1999-03-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.h (JOBJECT): Define JOBJECT as void * if Java is not available