@@ -1,3 +1,13 @@
+1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Makefile.am (OBJCFLAGS): Append @CFLAGS_NOWARN_UNKNOWN_PRAGMAS@.
+	(libdefobj_la_CPPFLAGS): Remove.
+
+	* FArguments.h: Never include jni.h.
+	(JOBJECT): Always define as VOID *.
+
+	* FCall.m: Include jni.h if HAVE_JDK.
+
 1999-03-15  Vladimir Jojic  <vjojic@chama.santafe.edu>
 
 	* Makefile.am (libdefobj_la_CPPFLAGS): Add 
